fixed letter spacing for SDUIDtext fonts

--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -64,6 +64,7 @@
 					>.footer
 						>.row
 							>.title
+								top: -50px
 								padding-top: 40px
 								padding-bottom: 40px
 				>.second-screen
