--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -204,6 +204,7 @@ html, body
 						font-size: 1em
 						font-weight: 300
 						line-height: 1.63
+						letter-spacing: 1px
 						text-align: center
 						color: #0a0c0f
 						margin: 0
@@ -492,9 +493,9 @@ html, body
 							display: inline-block
 							font-family: $SFUIDsemibold
 							font-size: 1em
-							font-weight: 500
+							font-weight: 600
 							line-height: 1
-							letter-spacing: -0.1px
+							letter-spacing: 1px
 							color: #ffffff
 							padding-bottom: 10px
 							border-bottom: 1px solid #fff
@@ -514,7 +515,7 @@ html, body
 								font-size: 2.3em
 								font-weight: 600
 								line-height: 1.14
-								letter-spacing: 0.2px
+								letter-spacing: 1px
 								color: #ffffff
 								border-bottom: none
 								cursor: default
@@ -613,17 +614,18 @@ html, body
 							font-family: 'SFUITextRegular', sans-serif
 							font-size: 1.25em
 							line-height: 1.22
-							letter-spacing: -0.1px
-							color: rgba(255, 255, 255, 0.7)
+							letter-spacing: 1px
+							font-weight: 600
+							color: #fff
 							margin-bottom: 20px
 
 						>p
 							font-family: 'SFUITextLight', sans-serif
 							margin: 0
 							font-size: 1em
-							font-weight: 500
-							line-height: 3
-							letter-spacing: -0.1px
+							font-weight: 300
+							line-height: 2.8
+							letter-spacing: 1px
 							color: #ffffff
 
 				.respond
@@ -673,6 +675,7 @@ html, body
 							background-color: transparent
 							font-family: $SFUIDregular
 							font-size: 1em
+							letter-spacing: 1px
 							text-align: left
 							color: rgba(255, 255, 255, 0.7)
 							position: relative
@@ -722,6 +725,7 @@ html, body
 								font-family: 'SFUIDTextMedium', sans-serif
 								font-size: 1.125em
 								font-weight: 500
+								letter-spacing: 1px
 								line-height: 54px
 								text-align: center
 								color: #ffffff
@@ -733,6 +737,7 @@ html, body
 								list-style: none
 								font-family: $SFUIDtext
 								font-size: 0.875em
+								letter-spacing: 1px
 								text-align: center
 								color: #ffffff
 								cursor: default
@@ -743,6 +748,7 @@ html, body
 						font-family: 'SFUIDTextMedium', sans-serif
 						font-size: 1.125em
 						font-weight: 500
+						letter-spacing: 1px
 						line-height: 1.22
 						text-align: center
 						color: #27c6ce
@@ -775,7 +781,7 @@ html, body
 							text-align: center
 							font-size: 14px
 							line-height: 1.29
-							letter-spacing: -0.1px
+							letter-spacing: 1px
 						&.active
 							background-color: #fff
 							> a
@@ -872,7 +878,7 @@ html, body
 								font-size: 1.25em
 								font-weight: 600
 								line-height: 1.5
-								letter-spacing: -0.1px
+								letter-spacing: 1px
 								text-align: center
 								color: #0a0c0f
 								margin-bottom: 5px
@@ -881,7 +887,7 @@ html, body
 								font-family: 'SFUITextRegular', sans-serif
 								font-size: 1.125em
 								line-height: 1.22
-								letter-spacing: -0.1px
+								letter-spacing: 1px
 								text-align: center
 								color: #9b9b9b
 
@@ -890,7 +896,7 @@ html, body
 								font-family: 'SFUITextRegular', sans-serif
 								font-size: 1em
 								line-height: 1.63
-								letter-spacing: -0.4px
+								letter-spacing: 1px
 								text-align: center
 								color: #0a0c0f
 								position: relative
@@ -1029,6 +1035,7 @@ html, body
 					font-size: 1.125em
 					font-weight: 500
 					line-height: 1.22
+					letter-spacing: 1px
 					text-align: center
 					color: #27c6ce
 					border: none
@@ -1047,7 +1054,7 @@ html, body
 				flex-direction: column
 				justify-content: space-between
 				max-width: 345px
-				padding: 70px 0 70px 10px
+				padding: 70px 0 70px 0px
 				width: 100%
 				min-height: 600px
 
@@ -1059,7 +1066,7 @@ html, body
 					font-family: 'SFUITextRegular', sans-serif
 					font-size: 1.125em
 					line-height: 1.22
-					letter-spacing: -0.1px
+					letter-spacing: 1px
 					color: rgba(255, 255, 255, 0.7)
 
 					>span
@@ -1067,7 +1074,7 @@ html, body
 						font-size: 1.25em
 						font-weight: 500
 						line-height: 1.5
-						letter-spacing: -0.1px
+						letter-spacing: 0.3px
 						color: #ffffff
 
 				>.adress
@@ -1078,7 +1085,7 @@ html, body
 					font-size: 2.25em
 					font-weight: 500
 					line-height: 0.83
-					letter-spacing: -0.5px
+					letter-spacing: 0.6px
 					color: #ffffff
 					margin-top: 40px
 
